# localCMS

./: .gitignore  README.md  pyproject.toml
.github/: AGENTS.md  PROJECT_CONTEXT.md
.github/agents/: architect.agent.md  coder.agent.md  devops.agent.md  docs.agent.md  product-manager.agent.md  research.agent.md  reviewer.agent.md  scrum-master.agent.md
.github/hooks/: block-dangerous-git.json
.github/hooks/scripts/: block_dangerous_git.py  block_placeholder_code.py  commit_discipline.py  guard_diff_scope.py  require_test_evidence.py
.github/instructions/: backend.instructions.md  frontend.instructions.md  testing.instructions.md
.github/prompts/: debug.prompt.md  plan.prompt.md  review.prompt.md  start-issue.prompt.md
.github/skills/change-scoping/: SKILL.md
.github/skills/code-quality-gates/: SKILL.md
.github/skills/colima/: SKILL.md
.github/skills/cronjob/: SKILL.md
.github/skills/debug-recovery-loop/: SKILL.md
.obsidian/: .gitignore  core-plugins.json  templates.json  vault.json
.obsidian/templates/: doc-template.md  issue-template.md
cli/: __init__.py  main.py
cli/commands/: doc.py  issue.py  link.py  obsidian.py  project.py
cli/core/: __init__.py  models.py  obsidian_vault.py  parser.py  query.py  render.py  storage.py
examples/: demo_cli_flow.py
projects/.obsidian/: workspace.json
projects/project-alpha/: project.yaml
projects/project-demo/: project.yaml
scripts/: install-hooks.ps1  install-hooks.sh  pre-commit
scripts/hooks/: pre-commit  pre-commit.ps1
tests/: test_obsidian_integration.py
(+24 files in other folders)
